--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "eventemitter3": "^4.0.7",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.1.0",
-    "follow-redirects": "^1.15.2",
+    "follow-redirects": "^1.15.4",
     "fresh": "^0.5.2",
     "fs-extra": "^3.0.1",
     "get-caller-file": "^2.0.5",
@@ -79,6 +79,7 @@
     "immutable": "^3.8.2",
     "inherits": "^2.0.4",
     "is-binary-path": "^2.1.0",
+    "is-buffer": "^2.0.5",
     "is-extglob": "^2.1.1",
     "is-fullwidth-code-point": "^3.0.0",
     "is-glob": "^4.0.3",
@@ -135,7 +136,7 @@
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2",
-    "wrap-ansi": "^7.0.0",
+    "wrap-ansi": "^9.0.0",
     "ws": "^8.11.0",
     "xmlhttprequest-ssl": "^2.0.0",
     "y18n": "^5.0.8",
