--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "rogeraleite_2023",
+  "name": "rogeraleite_2024",
   "version": "1.0.0",
-  "description": "2023",
+  "description": "2024",
   "main": "bs-config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npx npm-force-resolutions"
+  },
+  "resolutions": {
+    "axios": "^0.21.1",
+    "debug": "^4.3.1",
+    "follow-redirects": "^1.15.6",
+    "yargs-parser": "^20.2.0"
   },
   "repository": {
     "type": "git",
@@ -17,7 +24,13 @@
   },
   "homepage": "https://github.com/rogeraleite/rogeraleite_2021#readme",
   "devDependencies": {
-    "browser-sync": "^3.0.2"
+    "axios": "^1.7.2",
+    "browser-sync": "^3.0.2",
+    "debug": "^4.3.5",
+    "follow-redirects": "^1.15.6",
+    "localtunnel": "^1.8.3",
+    "npm-force-resolutions": "^0.0.10",
+    "yargs-parser": "^21.1.1"
   },
   "dependencies": {
     "accepts": "^1.3.8",
@@ -26,7 +39,6 @@
     "anymatch": "^3.1.3",
     "async": "^2.6.4",
     "async-each-series": "^0.1.1",
-    "axios": "^1.6.5",
     "balanced-match": "^1.0.2",
     "base64id": "^2.0.0",
     "batch": "^0.6.1",
@@ -48,7 +60,6 @@
     "connect-history-api-fallback": "^1.6.0",
     "cookie": "^0.4.2",
     "cors": "^2.8.5",
-    "debug": "^2.6.9",
     "depd": "^2.0.0",
     "destroy": "^1.0.4",
     "dev-ip": "^1.0.1",
@@ -66,7 +77,6 @@
     "eventemitter3": "^4.0.7",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.1.0",
-    "follow-redirects": "^1.15.4",
     "fresh": "^0.5.2",
     "fs-extra": "^3.0.1",
     "get-caller-file": "^2.0.5",
@@ -88,7 +98,6 @@
     "is-wsl": "^1.1.0",
     "jsonfile": "^3.0.1",
     "limiter": "^1.1.5",
-    "localtunnel": "^1.8.3",
     "lodash": "^4.17.21",
     "lodash.isfinite": "^3.3.2",
     "micromatch": "^4.0.5",
@@ -140,7 +149,6 @@
     "ws": "^8.11.0",
     "xmlhttprequest-ssl": "^2.0.0",
     "y18n": "^5.0.8",
-    "yargs": "^17.7.2",
-    "yargs-parser": "^21.1.1"
+    "yargs": "^17.7.2"
   }
 }
